[package]
name = "dfits-rs"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "A rust rewrite of dfits, used to read fits headers."
authors = ["Trystan Lambert <trystan.lambert@uwa.edu.au>"]
license = "MIT"
repository = "https://github.com/TrystanScottLambert/dfits-rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }

[[bin]]
path = "src/main.rs"
name = "dfits"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
